# school_projects

./: LICENSE  README.md
BP/: 20988.pdf:Zone.Identifier
BP/src/Arduino/: MotorControl.ino
BP/src/ORB_SLAM2/: CMakeLists.txt  Mono  RGBD
BP/src/PiInterface/: Helper.h  INIReader.h  MotionControlTab.cpp  MotionControlTab.h  PiInterfaceMFC.aps  PiInterfaceMFC.cpp  PiInterfaceMFC.h  PiInterfaceMFC.rc  PiInterfaceMFC.vcxproj  PiInterfaceMFC.vcxproj.filters  PiInterfaceMFCDlg.cpp  PiInterfaceMFCDlg.h  ReadMe.txt  RosbridgeClient.h  SSHClient.cpp  SSHClient.h  Settings.cpp  SystemControlTab.cpp  SystemControlTab.h  resource.h  ssh.lib  stdafx.cpp  stdafx.h
BP/src/pi_rover/: CMakeLists.txt  package.xml
BP/src/pi_rover/src/: helper.h  (+5 more)
NAV/scripts/: mqtt2db.py
NAV/src/: CMakeLists.txt  bt.cpp  bt.h  bt2mqtt.cpp  hexiwear.h  mqtt.cpp  mqtt.h
NAV/web/: health.php  index.php  motion.php  other.php  style.css  weather.php
PDS/linux/: kernel_forwarding.txt  preklad_konfigurace_kernel.txt  xdp.txt
PDS/src/common/: common.mk  parsing_helpers.h
PDS/src/xdp/: Makefile  xdp_prog_kern.c
PGR/src/: Makefile  mandelbrot2d.fs  mandelbrot2d.vs  pgr.cpp  pgr.h  projekt.cpp  projekt_pgr.vcxproj  projekt_pgr.vcxproj.filters
SEN/: instalace_rpi.txt
SEN/model_tisk/: pouzdro_telo.stl  pouzdro_vrch.stl  uchyt_spodek.stl  uchyt_telo.stl  ult_drzak.stl
SEN/src/mqtt2db/: crontab.txt  mqtt2db.py
SEN/src/senzor/: senzor.ino
SEN/src/web/: index.php  sensor_dht11.php  sensor_uwls.php  stats.php
SIN/: RUN.bat
SIN/src/: sin_dashboard.json
SIN/src/sin_eps32_acunit/: sin_01.ino
(+9 files in other folders)
